<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchColour">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="725dp"
        android:layout_gravity="center_horizontal"
        android:elevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.camera.view.PreviewView>

    <EditText
        android:id="@+id/text_input"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/autofill"
        android:autofillHints="@string/autofill"
        android:layout_gravity="bottom"
        android:layout_marginBottom="200dp"
        android:background="@color/white"/>


<!--Create the center reticle-->
    <View
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:elevation="2dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle" />

    <View
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:elevation="2dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle" />

    <View
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:elevation="2dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle" />

<!--    <TextView-->
<!--        android:id="@+id/testText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|end"-->
<!--        android:elevation="3dp"-->
<!--        android:includeFontPadding="false"-->
<!--        android:text="@string/placeholder_text"-->
<!--        android:textSize="30sp" />-->

    <TextView
        android:id="@+id/yuvText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:elevation="2dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/placeholder_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/rgbText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:elevation="2dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/placeholder_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hexText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:elevation="2dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/placeholder_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/image_capture_button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="bottom|center"
        android:elevation="2dp"
        android:text="@string/find_match"/>

    <Button
        android:id="@+id/light_button"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="bottom|end"
        android:elevation="2dp"
        android:text="@string/light"/>

    <Button
        android:id="@+id/log_colour"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="bottom|start"
        android:elevation="2dp"
        android:text="@string/log_colour"/>

    <FrameLayout
        android:id="@+id/popup_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:elevation="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/popup_text"
            android:text="@string/placeholder_text"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:text="@string/close_popup"
            android:id="@+id/close_popup"/>
    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".50" />

</FrameLayout>